--- a/spread/spread-client/src/app/app.html
+++ b/spread/spread-client/src/app/app.html
@@ -5,7 +5,7 @@
     <div padding class="menu-left menu-bg">
       <a menuClose>
         <img class="profile-picture" src="assets/img/user/adam.jpg">
-        <h4 ion-text color="light">Adam Lambert</h4>
+        <h4 ion-text color="light">{{currentUser.name}}</h4>
       </a>
     </div>
 
