tela de solicitação de servico

--- a/spread/spread-client/src/app/app.html
+++ b/spread/spread-client/src/app/app.html
@@ -4,7 +4,7 @@
     <!-- User profile -->
     <div padding class="menu-left menu-bg">
       <a menuClose>
-        <img class="profile-picture" src="assets/img/user/adam.jpg">
+        <!-- <img class="profile-picture" src="assets/img/user/adam.jpg"> -->
         <h4 ion-text color="light">{{currentUser.name}}</h4>
       </a>
     </div>
